Set the modloader and JVM Version.

--- a/Platforms/Forge/build.gradle
+++ b/Platforms/Forge/build.gradle
@@ -203,6 +203,7 @@ if ((opc.hasPropertySet("curseApiKey") || opc.hasPropertySet("CURSEAPIKEY"))) {
 
         project { cp ->
             cp.id = "231095"
+            cp.addGameVersion "Java ${java.toolchain.languageVersion.asInt()}"
             cp.addGameVersion(project.exactMinecraftVersion)
             cp.changelog = rootProject.file('build/changelog.md')
             cp.changelogType = 'markdown'
