Implement several bugfixes, creative board copying between worlds, as well as several fixes to light processing.
Upload the correct Fabric jar.

--- a/Platforms/Fabric/build.gradle
+++ b/Platforms/Fabric/build.gradle
@@ -92,7 +92,7 @@ if ((opc.hasPropertySet("curseApiKey") || opc.hasPropertySet("CURSEAPIKEY"))) {
             }
 
             afterEvaluate {
-                cp.mainArtifact(remapJar)
+                cp.mainArtifact(file("${project.buildDir}/libs/${archivesBaseName}-${version}.jar"))
                 tasks.curseforge561059.dependsOn remapJar
             }
 
