Enable proper rendering on Fabric (Sodium + Indium or Indigo currently are supported). Add the start of the Pattern Sharing system. Initially just the block that is needed, but more will follow soon I promise. Fix the damage usage on a chisel, it now again defaults to the tiers usage amount * the amount of bits in the block. Fix other issues.

--- a/Platforms/Forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/Platforms/Forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -57,3 +57,6 @@ public net.minecraft.client.KeyMapping f_90816_ # key
 # VertexFormat
 public com.mojang.blaze3d.vertex.VertexFormat f_86013_ # offsets
 
+# MaxDamage based on bit size.
+public-f net.minecraft.world.item.Item m_41462_()I # getMaxDamage
+
