Fix several issues related to rendering highlights because a given side of a model was always marked un-shaded.
Fix view box collision calculations.

Start implementation of the sharing engine.

--- a/Platforms/Forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/Platforms/Forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -60,3 +60,5 @@ public com.mojang.blaze3d.vertex.VertexFormat f_86013_ # offsets
 # MaxDamage based on bit size.
 public-f net.minecraft.world.item.Item m_41462_()I # getMaxDamage
 
+# Writable NativeImage.
+public com.mojang.blaze3d.platform.NativeImage m_85064_(Ljava/nio/channels/WritableByteChannel;)Z # writeToChannel
