--- a/Platforms/Forge/build.gradle
+++ b/Platforms/Forge/build.gradle
@@ -27,6 +27,10 @@ repositories {
         name "tterrag maven"
         url "https://maven.tterrag.com/"
     }
+    maven {
+        name = "CurseForge"
+        url = "https://cursemaven.com/"
+    }
 }
 
 archivesBaseName = "${mod_name}-forge-${minecraft_version}"
@@ -131,6 +135,8 @@ dependencies {
     compileOnly project(":Common")
     compileOnly project(":API")
     compileOnly project(":Platforms:Core")
+
+    runtimeOnly fg.deobf("curse.maven:spark-361579:3585686")
 
     compileOnly fg.deobf("mezz.jei:jei-${project.exactMinecraftVersion}:${project.jeiVersion}:api")
     runtimeOnly fg.deobf("mezz.jei:jei-${project.exactMinecraftVersion}:${project.jeiVersion}")
