--- a/gradle.properties
+++ b/gradle.properties
@@ -34,6 +34,9 @@ gitUrl=https://github.com/ChiselsAndBits/Chisels-and-Bits.git
 gitConnectUrl=https://github.com/ChiselsAndBits/Chisels-and-Bits.git
 projectUrl=https://www.curseforge.com/minecraft/mc-mods/chisels-bits
 
+# Shadow mapping
+shadowRenamedNamespaces=net.jpountz:mod.chiselsandbits.shaded.net.jpountz
+
 # Gradle
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
