--- a/Common/gradle.properties
+++ b/Common/gradle.properties
@@ -2,4 +2,5 @@ crowdInDownloadDirectory=src/main/resources/assets/chiselsandbits/lang
 usesCrowdInBuildingWithFilteredBranches=true
 usesCrowdInUploadWithFilteredBranches=true
 
+lz4_version=1.8.0
 
