Fix the issue on forge.

--- a/Platforms/Fabric/build.gradle
+++ b/Platforms/Fabric/build.gradle
@@ -61,6 +61,8 @@ processResources {
     filesMatching("fabric.mod.json") {
         expand "version": project.version
     }
+
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
 tasks.withType(JavaCompile) {
