--- a/Platforms/Forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/Platforms/Forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -62,3 +62,19 @@ public-f net.minecraft.world.item.Item m_41462_()I # getMaxDamage
 
 # Writable NativeImage.
 public com.mojang.blaze3d.platform.NativeImage m_85064_(Ljava/nio/channels/WritableByteChannel;)Z # writeToChannel
+
+public net.minecraft.world.phys.shapes.CubeVoxelShape <init>(Lnet/minecraft/world/phys/shapes/DiscreteVoxelShape;)V
+protected-f net.minecraft.world.phys.shapes.DiscreteVoxelShape f_82781_ # xSize
+protected-f net.minecraft.world.phys.shapes.DiscreteVoxelShape f_82782_ # ySize
+protected-f net.minecraft.world.phys.shapes.DiscreteVoxelShape f_82783_ # zSize
+protected net.minecraft.world.phys.shapes.VoxelShape <init>(Lnet/minecraft/world/phys/shapes/DiscreteVoxelShape;)V # VoxelShape
+public-f net.minecraft.world.phys.shapes.BitSetDiscreteVoxelShape
+
+protected-f net.minecraft.world.phys.shapes.BitSetDiscreteVoxelShape f_82580_ # storage
+protected net.minecraft.world.phys.shapes.BitSetDiscreteVoxelShape f_82581_ # xMin
+protected net.minecraft.world.phys.shapes.BitSetDiscreteVoxelShape f_82582_ # yMin
+protected net.minecraft.world.phys.shapes.BitSetDiscreteVoxelShape f_82583_ # zMin
+protected net.minecraft.world.phys.shapes.BitSetDiscreteVoxelShape f_82584_ # xMax
+protected net.minecraft.world.phys.shapes.BitSetDiscreteVoxelShape f_82585_ # yMax
+protected net.minecraft.world.phys.shapes.BitSetDiscreteVoxelShape f_82586_ # zMax
+public net.minecraft.client.renderer.entity.ItemRenderer m_115127_(Lnet/minecraft/world/item/ItemStack;IILnet/minecraft/client/resources/model/BakedModel;)V # renderGuiItem
