--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,7 @@ mod_id=chiselsandbits
 # Dependency versions
 jeiVersion=9.1.0.46
 dataGeneratorsVersion=0.1.46-ALPHA
+jetbrainsAnnotationsVersion=22.0.0
 
 # Versioning schema data.
 sourceVersionName=1.16
