--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,18 @@
 # Project
-modVersion=1.0.0
+modVersion=1.0.150-PATREON
 group=mod.chiselsandbits
 
 # Common
-minecraft_version=1.18.1
-exactMinecraftVersion=1.18.1
-additionalMinecraftVersions=1.18.1
+minecraft_version=1.18.2
+exactMinecraftVersion=1.18.2
+additionalMinecraftVersions=1.18.2
 
 # Forge
-forge_version=39.0.9
+forge_version=40.0.32
 
 # Fabric
-fabric_version=0.44.0+1.18
-fabric_loader_version=0.12.1
+fabric_version=0.47.9+1.18.2
+fabric_loader_version=0.13.3
 
 # Mod options
 mod_name=Chisels&Bits
@@ -20,7 +20,7 @@ mod_author=OrionDevelopment
 mod_id=chiselsandbits
 
 # Dependency versions
-jeiVersion=9.1.0.46
+jeiVersion=9.2.1.69
 dataGeneratorsVersion=0.1.46-ALPHA
 jetbrainsAnnotationsVersion=22.0.0
 
