--- a/gradle.properties
+++ b/gradle.properties
@@ -8,11 +8,11 @@ exactMinecraftVersion=1.18.2
 additionalMinecraftVersions=1.18.2
 
 # Forge
-forge_version=40.0.32
+forge_version=40.1.47
 
 # Fabric
-fabric_version=0.47.9+1.18.2
-fabric_loader_version=0.13.3
+fabric_version=0.55.1+1.18.2
+fabric_loader_version=0.14.6
 
 # Mod options
 mod_name=Chisels&Bits
@@ -20,7 +20,8 @@ mod_author=OrionDevelopment
 mod_id=chiselsandbits
 
 # Dependency versions
-jeiVersion=9.2.1.69
+jei_version=10.0.0.191
+rei_version=8.2.471
 dataGeneratorsVersion=0.1.46-ALPHA
 jetbrainsAnnotationsVersion=22.0.0
 
