--- a/Platforms/Forge/src/main/resources/META-INF/mods.toml
+++ b/Platforms/Forge/src/main/resources/META-INF/mods.toml
@@ -4,7 +4,7 @@ license="GLGPLv3"
 
 [[mods]] #mandatory
 modId="chiselsandbits"
-version="${version}"
+version="${file.jarVersion}"
 displayName="Chisels & bits"
 authors="OrionOnline, LDTTeam, AlgorithmX2 "
 logoFile="logo-forge.png"
