Exclude JMH Files from git.

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ src/documentation/generated/
 src/main/resources/assets/chiselsandbits/lang/*
 !src/main/resources/assets/chiselsandbits/lang/en_us.json
 /repo/
+common/src/jmh/generated
