--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -106,6 +106,11 @@ project.minecraft.runs { runSpecContainer ->
     }
 }
 
+
+project.dependencies.implementation fg.deobf("com.simibubi.create:create-${create_minecraft_version}:${create_version}:slim") { transitive = false }
+project.dependencies.implementation fg.deobf("com.jozufozu.flywheel:flywheel-forge-${flywheel_minecraft_version}:${flywheel_version}")
+project.dependencies.implementation fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
+
 project.dependencies.minecraft "net.minecraftforge:forge:${project.minecraftVersion}-${project.forgeVersion}"
 project.dependencies.annotationProcessor "org.spongepowered:mixin:${project.mixinAnnotationProcessorVersion}:processor"
 project.dependencies.includedLibraries fg.deobf("com.communi-suggestu.scena:scena-forge:${project.scenaVersion}") {
