Fix dependencies on Create, discover Fabric plugins via ASM, and handle rotating chiseled blocks better.

--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,16 @@
-import groovy.json.JsonOutput
 import org.apache.tools.ant.filters.ReplaceTokens
 
+apply from: 'https://raw.githubusercontent.com/ldtteam/OperaPublicaCreator/main/gradle/modules/git.gradle'
+apply from: 'https://raw.githubusercontent.com/ldtteam/OperaPublicaCreator/main/gradle/modules/util.gradle'
+
 project.group = "mod.chiselsandbits"
-project.version = (System.getenv().containsKey("Version") ? System.getenv("Version") : project.localVersion)
+project.version = opc.buildVersionNumberWithOffset(
+        (System.getenv().containsKey("Version") ? System.getenv("Version") : project.localVersion),
+        project.minecraftVersion,
+        opc.getProperty("sourceVersionName"),
+        opc.getIntProperty("sourceVersionElementIndex"),
+        opc.getIntProperty("mcVersionElementIndex")
+)
 
 //Configure extension utility methods on all subprojects.
 subprojects { Project subProject ->
@@ -189,6 +197,9 @@ subprojects { subProject ->
         configure.plugin("maven-publish")
     }
 
+    subProject.apply from: 'https://raw.githubusercontent.com/ldtteam/OperaPublicaCreator/main/gradle/modules/git.gradle'
+    subProject.apply from: 'https://raw.githubusercontent.com/ldtteam/OperaPublicaCreator/main/gradle/modules/util.gradle'
+
     subProject.archivesBaseName = "${rootProject.name}-${subProject.name}"
 
     subProject.repositories.mavenLocal()
@@ -196,6 +207,10 @@ subprojects { subProject ->
     subProject.repositories.maven {
         name 'LDTTeam - Modding'
         url 'https://ldtteam.jfrog.io/ldtteam/modding/'
+    }
+    subProject.repositories.maven {
+        name = 'TTerag maven'
+        url = 'https://maven.tterrag.com/'
     }
 
     subProject.group = rootProject.group
@@ -215,6 +230,14 @@ subprojects { subProject ->
     subProject.dependencies.compileOnly "org.jetbrains:annotations:${project.jetbrainsAnnotationsVersion}"
     subProject.dependencies.testCompileOnly "org.jetbrains:annotations:${project.jetbrainsAnnotationsVersion}"
 
+    tasks.withType(Javadoc.class, {task ->
+        task.options.tags(
+                'apiNote:a:API Note:',
+                'implSpec:a:Implementation Requirements:',
+                'implNote:a:Implementation Note:',
+                'reason:a:The reason for adding an @Overwrite'
+        )
+    })
 
     subProject.afterEvaluate {
         if (subProject.tasks.build.enabled) {
@@ -249,6 +272,19 @@ subprojects { subProject ->
 
                         subProject.cleanMavenPublication(pub)
                         subProject.setupEmbeddedPublishing(pub)
+                    }
+                }
+
+                if (System.getenv().containsKey("LDTTeamJfrogUsername") && System.getenv().containsKey("LDTTeamJfrogPassword")) {
+                    repositories {
+                        maven {
+                            name 'LDTTeamJfrog'
+                            credentials {
+                                username System.getenv().get("LDTTeamJfrogUsername")
+                                password System.getenv().get("LDTTeamJfrogPassword")
+                            }
+                            url 'https://ldtteam.jfrog.io/ldtteam/mods-maven'
+                        }
                     }
                 }
             }
