--- a/gradle.properties
+++ b/gradle.properties
@@ -32,3 +32,8 @@ githubUrl=https://github.com/Chisels&Bits/Chisels&Bits
 gitUrl=https://github.com/Chisels&Bits/Chisels&Bits.git
 gitConnectUrl=https://github.com/Chisels&Bits/Chisels&Bits.git
 projectUrl=https://github.com/Chisels&Bits/Chisels&Bits
+
+# Versioning schema data.
+sourceVersionName=1.16
+sourceVersionElementIndex=1
+mcVersionElementIndex=1
