Initial work for 1.19.3 currently compile error free.

--- a/common/accesstransformer.cfg
+++ b/common/accesstransformer.cfg
@@ -1,13 +1,7 @@
 # baggui
 public net.minecraft.client.gui.screens.inventory.AbstractContainerScreen m_97799_(Lcom/mojang/blaze3d/vertex/PoseStack;Lnet/minecraft/world/inventory/Slot;)V #moveItems
 public net.minecraft.client.gui.screens.inventory.AbstractContainerScreen m_97774_(Lnet/minecraft/world/inventory/Slot;DD)Z #isSlotSelected
-protected net.minecraft.client.gui.inventory.GuiContainer field_147006_u # theSlot
-public net.minecraft.client.gui.Font func_180455_b(Ljava/lang/String;FFIZ)I #
-
-# need to read these in certain cases.
-public net.minecraft.item.EnumDyeColor field_176793_x # chatColor
-public net.minecraft.world.level.block.Block field_149782_v # blockHardness
-public net.minecraft.world.level.block.Block field_149781_w # blockResistance
+public net.minecraft.client.gui.Font m_252966_(Ljava/lang/String;FFILorg/joml/Matrix4f;ZZ)I # drawInternal
 
 # bagcontainer
 public net.minecraft.world.inventory.AbstractContainerMenu f_38848_ # listeners
@@ -19,6 +13,7 @@ public net.minecraft.world.item.BlockItem f_40563_ #block
 public net.minecraft.world.level.block.state.BlockBehaviour f_60439_ #properties
 public net.minecraft.world.level.block.state.BlockBehaviour f_60446_ #soundType
 public net.minecraft.client.gui.Font m_92803_(Ljava/lang/String;FFILcom/mojang/math/Matrix4f;ZZ)I #renderString
+
 
 public net.minecraft.client.gui.Gui f_92993_ #remainingHighlightTicks
 
@@ -89,3 +84,6 @@ public net.minecraft.client.renderer.entity.ItemRenderer m_115189_(Lnet/minecraf
 public net.minecraft.client.renderer.RenderType m_173215_(Ljava/lang/String;Lcom/mojang/blaze3d/vertex/VertexFormat;Lcom/mojang/blaze3d/vertex/VertexFormat$Mode;IZZLnet/minecraft/client/renderer/RenderType$CompositeState;)Lnet/minecraft/client/renderer/RenderType$CompositeRenderType; # create
 public net.minecraft.world.inventory.MenuType <init>(Lnet/minecraft/world/inventory/MenuType$MenuSupplier;)V # MenuType
 public net.minecraft.world.inventory.MenuType$MenuSupplier
+
+public net.minecraft.world.item.CreativeModeTab$Output
+public-f net.minecraft.data.recipes.RecipeProvider m_6055_()Ljava/lang/String; # getName
