--- a/gradle.properties
+++ b/gradle.properties
@@ -12,16 +12,16 @@ owner=Chisels&Bits
 modId=chiselsandbits
 
 ### Dependency versioning
-minecraftVersion=1.19.2
-parchmentVersion=2022.08.10
+minecraftVersion=1.19.3
+parchmentVersion=2022.11.27
 parchmentMinecraftVersion=1.19.2
 jetbrainsAnnotationsVersion=23.0.0
-fabricLoaderVersion=0.14.9
-fabricVersion=0.68.0
-forgeVersion=43.1.25
+fabricLoaderVersion=0.14.11
+fabricVersion=0.68.1
+forgeVersion=44.0.6
 mixinAnnotationProcessorVersion=0.8.4
-scenaVersion=1.0.81
-saeculariaCaudicesVersion=1.0.11
+scenaVersion=1.0.50-LOCAL
+saeculariaCaudicesVersion=1.0.12
 lz4Version=1.8.0
 
 # Metadata
