--- a/api/build.gradle
+++ b/api/build.gradle
@@ -14,3 +14,7 @@ project.minecraft.accessTransformer = project(':common').file("accesstransformer
 if (!project.file("build\\fg_cache\\net\\minecraft\\joined\\${project.minecraftVersion}").exists()) {
     project.file("build\\fg_cache\\net\\minecraft\\joined\\${project.minecraftVersion}").mkdirs()
 }
+
+task("prepareWorkspace") {
+
+}
