--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ org.gradle.debug=false
 javaVersion=17
 
 ### Versioning
-localVersion=1.0.17
+localVersion=1.0.130-LOCAL
 owner=Chisels&Bits
 modId=chiselsandbits
 
@@ -20,7 +20,7 @@ fabricLoaderVersion=0.14.9
 fabricVersion=0.68.0
 forgeVersion=43.1.25
 mixinAnnotationProcessorVersion=0.8.4
-scenaVersion=1.0.81
+scenaVersion=1.0.84
 saeculariaCaudicesVersion=1.0.11
 lz4Version=1.8.0
 
