Fix plugin detection on Fabric and update to the latest Scena to fix several model issues.

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ org.gradle.debug=false
 javaVersion=17
 
 ### Versioning
-localVersion=1.0.17
+localVersion=1.0.130-LOCAL
 owner=Chisels&Bits
 modId=chiselsandbits
 
