--- a/gradle.properties
+++ b/gradle.properties
@@ -24,6 +24,9 @@ scenaVersion=1.0.92
 saeculariaCaudicesVersion=1.0.14
 lz4Version=1.8.0
 
+### Test dependency versions
+junitVersion=5.8.1
+
 # Metadata
 author=OrionDevelopment
 
