Update to the latest forge.

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@ parchmentMinecraftVersion=1.19.2
 jetbrainsAnnotationsVersion=23.0.0
 fabricLoaderVersion=0.14.11
 fabricVersion=0.68.1
-forgeVersion=44.0.18-fix-1.19.x-jarjar
+forgeVersion=44.1.23
 mixinAnnotationProcessorVersion=0.8.4
 scenaVersion=1.0.94
 saeculariaCaudicesVersion=1.0.15
