--- a/gradle.properties
+++ b/gradle.properties
@@ -7,21 +7,21 @@ org.gradle.debug=false
 javaVersion=17
 
 ### Versioning
-localVersion=1.0.130-LOCAL
+localVersion=1.0.1000-PATREON
 owner=Chisels&Bits
 modId=chiselsandbits
 
 ### Dependency versioning
-minecraftVersion=1.19.3
-parchmentVersion=2022.11.27
-parchmentMinecraftVersion=1.19.2
+minecraftVersion=1.19.4
+parchmentVersion=2023.03.12
+parchmentMinecraftVersion=1.19.3
 jetbrainsAnnotationsVersion=23.0.0
-fabricLoaderVersion=0.14.11
-fabricVersion=0.68.1
-forgeVersion=44.1.23
+fabricLoaderVersion=0.14.18
+fabricVersion=0.76.0
+forgeVersion=45.0.22
 mixinAnnotationProcessorVersion=0.8.4
-scenaVersion=1.0.97
-saeculariaCaudicesVersion=1.0.15
+scenaVersion=1.0.100
+saeculariaCaudicesVersion=1.0.17
 lz4Version=1.8.0
 
 # Metadata
