--- a/gradle.properties
+++ b/gradle.properties
@@ -12,16 +12,19 @@ owner=Chisels&Bits
 modId=chiselsandbits
 
 ### Dependency versioning
-minecraftVersion=1.19.4
+minecraftVersion=1.20.1
+additionalMinecraftVersions=1.20
 parchmentVersion=2023.03.12
 parchmentMinecraftVersion=1.19.3
 jetbrainsAnnotationsVersion=23.0.0
-fabricLoaderVersion=0.14.18
-fabricVersion=0.76.0
-forgeVersion=45.0.22
+fabricLoaderVersion=0.14.21
+fabricVersion=0.83.1
+forgeVersion=47.0.1
 mixinAnnotationProcessorVersion=0.8.4
-scenaVersion=1.0.100
-saeculariaCaudicesVersion=1.0.17
+saeculariaCaudicesVersion=1.0.21
+supportedSaeculariaCaudicesVersionRange=[1.0.21,2.0.0)
+scenaVersion=1.0.102
+supportedScenaVersionRange=[1.0.102,2.0.0)
 lz4Version=1.8.0
 
 # Metadata
