--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -117,6 +117,10 @@ project.dependencies.forgeLibrary ("org.lz4:lz4-pure-java:${project.lz4Version}"
 }
 project.dependencies.compileOnly fg.deobf("com.communi-suggestu.saecularia-caudices:saecularia-caudices-core:${project.saeculariaCaudicesVersion}")
 
+project.dependencies.implementation fg.deobf("com.simibubi.create:create-${create_minecraft_version}:${create_version}:slim") { transitive = false }
+project.dependencies.implementation fg.deobf("com.jozufozu.flywheel:flywheel-forge-${flywheel_minecraft_version}:${flywheel_version}")
+project.dependencies.implementation fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
+
 project.tasks.processResources.from (project(":common").file("accesstransformer.cfg")) {
     into 'META-INF'
 }
