--- a/forge/gradle.properties
+++ b/forge/gradle.properties
@@ -1,5 +1,5 @@
-create_minecraft_version = 1.19.2
-flywheel_minecraft_version = 1.19.2
-create_version = 0.5.0.e-13
-flywheel_version = 0.6.6-6
-registrate_version = MC1.19-1.1.5
+create_minecraft_version = 1.20.1
+flywheel_minecraft_version = 1.20
+create_version = 0.5.1.d-9
+flywheel_version = 0.6.9-4
+registrate_version = MC1.20-1.3.3
