--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ org.gradle.debug=false
 javaVersion=17
 
 ### Versioning
-localVersion=1.0.4-PATREON
+localVersion=1.0.0-FC
 owner=Chisels&Bits
 modId=chiselsandbits
 
@@ -20,7 +20,7 @@ jetbrainsAnnotationsVersion=23.0.0
 fabricLoaderVersion=0.15.6
 fabricVersion=0.95.4
 forgeVersion=20.4.147-beta
-scenaVersion=1.0.122
+scenaVersion=1.0.133
 lz4Version=1.8.0
 
 # Metadata
