--- a/api/build.gradle
+++ b/api/build.gradle
@@ -5,7 +5,7 @@ plugins {
 project.minecraft.accessTransformers.file project(":common").file("accesstransformer.cfg")
 
 project.dependencies.implementation "net.minecraft:client:${project.minecraftVersion}"
-project.dependencies.implementation "com.communi-suggestu.scena:core:${project.scenaVersion}"
+project.dependencies.implementation "com.communi-suggestu.scena:scena-core:${project.scenaVersion}"
 
 subsystems {
     parchment {
